fix: overflow now hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+#container {
+  position: relative;
+  overflow-x: hidden;
 }
 
 #first-screen {
@@ -23,17 +29,19 @@
 }
 
 #info-container {
+  position: relative;
   height: 50vh;
   width: 100vw;
-  background-color: white;
   overflow-x: hidden;
 }
 
 #nails-cards-container {
+  position: relative;
   width: 100vw;
   height: 100vh;
   background: url("./assets/images/background-nails.png") no-repeat center;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 header {
@@ -53,7 +61,13 @@ header h3 {
   color: white;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  font-size: 2.6vmax;
+  font-size: 1.8vw;
+}
+
+@media (max-width: 768px) {
+  header h3 {
+    font-size: 2.6vmax;
+  }
 }
 
 .space-given {
